--- a/styles/partials/page-landing.css
+++ b/styles/partials/page-landing.css
@@ -1,6 +1,3 @@
-:root{
-    font-size: 40%; /* medidas REM */ 
-}
 
 #page-landing {
     background-color: var(--color-primary);
@@ -74,7 +71,66 @@
     background-color: var(--color-secondary-dark);
 }
 
+/* Separar imagem do texto dentro dos botões*/
 .buttons-container a img{
     width: 4rem;
     margin-right: 1.6rem;
+}
+
+.total-connections {
+    font-size: 1.8rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.total-connections img {
+    margin-left: 0.8rem;
+}
+
+@media (max-width: 700px){
+    :root{
+        font-size: 40%;
+    }
+}
+
+@media (min-width: 1100px){
+    #page-landing #container{
+        max-width: 1100px;
+        display: grid;
+        grid-template-columns: 2fr 1fr 2fr;
+        grid-template-rows: 350px 1fr;
+        grid-template-areas:
+        "proffy image image"
+        "button button texting";
+        column-gap: 87px;
+        row-gap: 86px;
+    }
+
+    .logo-container {
+        grid-area: proffy;
+        text-align: initial;
+        align-self: center;
+        margin: 0;
+    }
+    
+    .logo-container img{
+        height: 127px;
+    }
+
+    .hero-image{
+        grid-area: image;
+        height: 350px;
+    }
+
+    .buttons-container{
+        grid-area: button;
+        justify-content: left;
+    }
+    
+    .total-connections{
+        grid-area: texting;
+        justify-self: end;
+        font-size: 1.2rem;
+    }
+
 }
