--- a/src/views/give-classes.html
+++ b/src/views/give-classes.html
@@ -17,6 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
 
     <script src="/scripts/addField.js" defer></script>
+    <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
 
 
 </head>
